--- a/Frontend/src/Pages/questionpaper/Upload/Qpupload.css
+++ b/Frontend/src/Pages/questionpaper/Upload/Qpupload.css
@@ -1,8 +1,10 @@
 .text-extraction-app {
-  max-width: 800px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 20px;
   font-family: Arial, sans-serif;
+
+ 
   
 }
 
@@ -10,6 +12,13 @@
   margin-top: 20px;
   display: flex;
   align-items: center;
+  align-items: center;
+  justify-content: center;
+
+ 
+  width: 100%;
+
+ 
 
 }
 
@@ -20,25 +29,69 @@ img {
 }
 
 .text-container {
-  flex: 1;
+  background-color: rgb(248, 250, 251);
+  margin: 2px;
+  margin-left: 20%;
+
+
+ width: 40%;
+ height: 50%;
+  padding: 10px 20px;
+
+
+  
+font-weight: bold;
+  
+  color: rgb(7, 0, 0);            
+ 
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  gap: 10%;
+ 
+  text-align: center;
+
+  font-size: small;
+  border: 1px solid black;
+  margin-bottom: 2%;
+
 }
 
-textarea {
-  width: 80%;
-  min-height: 300px;
-  padding: 10px;
-  margin-top: 10px;
+
+
+
+
+.dodo{
+
+  width: 100%;
+  background-color: #000000;
+}
+
+.image-list{
+
+width: 70%;
+margin-top: 5%;
+
+margin-left: 15%;
+margin-right: 10%;
+
+
+
+
+
+  
 }
 
 
-.inp{
+.inpdrop{
 
 
   background-color: rgb(226, 237, 245);
   margin: 10px;
-  margin-left: 10%;
+
   padding: 10px 30px;
-  text-align: center;
+
   width: 60%;
  
   text-transform: uppercase;
@@ -47,13 +100,23 @@ textarea {
   color: rgb(7, 0, 0);            
   box-shadow: 0 0 20px #1f1111;
   border-radius: 10px;
-  display: block;
+  margin-left:  20%;
+
+  margin-right: 15%;
   align-self: center;
   align-items: center;
   justify-content: center;
   border: 1px solid black;
+
+
+
 }
 
+
+.inpdrop p{
+
+  text-align: center;
+}
 
 
 
@@ -77,6 +140,8 @@ textarea {
 
 .button-container{
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 
@@ -98,18 +163,53 @@ font-style: italic;
   /* Add other styling as needed */
 }
 
+.in{
+
+  background-color: #eee;
+  margin: 10px;
+  margin-left: 0%;
+  padding: 3% 2%;
+  text-align: center;
+  width: 100%;
+ font-size: small;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 100% auto;
+  color: rgb(7, 0, 0);            
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  display: block;
+  align-self: center;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
+
+
+
+
+
+}
+
+
+
+
+
+
+
 
 
 .reorder{
 
 border: 1px solid  black;
-margin: 5px 10px;
+margin: 5% 10px;
 border-radius: 10px;
+
+
 
 }
 @media (max-width: 768px) {
 
-.inp{
+.inpdrop{
   
  background-color: #eee;
  margin: 0px;
@@ -129,6 +229,78 @@ font-size: small;
  align-items: center;
  justify-content: center;
  border: 3px solid black;
+}
+
+
+.text-container {
+  background-color: rgb(248, 250, 251);
+  margin: 0px;
+
+
+ width: 50%;
+ height: 50%;
+  padding: 1% 5%;
+  
+font-weight:bolder;
+  margin-bottom: 5%;
+font-size: small;
+  color: rgb(7, 0, 0);            
+ 
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  gap: 10%;
+ 
+  text-align: center;
+  border: 1px solid black;
+
+}
+.text-contain{
+  display: flex;
+  flex-direction: column;
+  padding: 2% 5%;
+
+}
+
+
+.image-list{
+
+
+  width: 100%;
+
+  margin-left: 0%;
+margin-right: 0%
+}
+
+
+
+
+.in{
+
+  background-color: rgb(248, 250, 251);
+  margin: 0px;
+
+
+ width: 100%;
+ height: 100%;
+  padding: 2% 5%;
+  
+font-weight:normal;
+  
+font-size: small;
+  color: rgb(7, 0, 0);            
+  box-shadow: none;
+  border-radius: 3px;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+
+ 
+  text-align: center;
+  border: 1px solid black;
+
+
 }
   
 }
