--- a/Frontend/src/Pages/LandingPage/LandingPage.css
+++ b/Frontend/src/Pages/LandingPage/LandingPage.css
@@ -125,17 +125,25 @@ button  {
   padding: 15px 45px;
   text-align: center;
   text-transform: uppercase;
-  transition: 0.5s;
-  background-size: 200% auto;
+  
   color: white;            
   box-shadow: 0 0 20px #eee;
   border-radius: 10px;
   display: block;
+
+  background-color: #8ab8e6; /* Change this to the desired background color */
+  color: #fff; /* Change this to the desired text color */
+  transition: background-color 3s ease-in; 
+  
 }
 button:hover {
   background-position: right center; /* change the direction of the change here */
   color: #fff;
   text-decoration: none;
+}
+
+button:active{
+  background: rgb(128, 156, 229);
 }
 
 
