--- a/Frontend/src/Pages/questionpaper/Search/Searchqp.css
+++ b/Frontend/src/Pages/questionpaper/Search/Searchqp.css
@@ -13,6 +13,8 @@
     flex-direction: column;
     margin-bottom: 20px;
     margin-top: 20px;
+    list-style-type: none;
+    list-style:none;
   
     svg {
       margin-right: 10px;
@@ -149,23 +151,38 @@
   padding: 0;
   margin: 0;
   position: relative;
-  background-color: #fff;
-
-  max-height: 150px;
+  background-color: #ba9e9e;
+  list-style-type: none; /* This removes the list symbol */
+  padding: 8px;
+  max-height: 100px;
   overflow-y: auto;
-  width: 20%;
+  width: 80%;
   z-index: 1;
+  font-size: smaller;
+  align-self: center;
+  margin-left: 10%;
+
+}
+
+
+.react-autosuggest__suggestions-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  font-size: smaller;
 }
 
 .suggestions-list li {
   padding: 1px;
   cursor: pointer;
-  border: 1px solid #522929;
+  border: 2px solid #504141;
   border-radius: 5px;
+  list-style-type: none;
+  font-size: smaller;
 }
 
 .suggestions-list li:hover {
-  background-color: #f2f2f2;
+  background-color: #341a1a;
 }
 
  
@@ -189,7 +206,8 @@
   padding: 10px 40px;
   text-align: center;
   text-transform:none;
-
+list-style: none;
+list-style-type: none;
   background-size: 200% auto;
   color: rgb(21, 6, 6);            
   box-shadow: 0 0 20px #decfcf;
