--- a/Frontend/src/Pages/questionpaper/Search/Searchqp.css
+++ b/Frontend/src/Pages/questionpaper/Search/Searchqp.css
@@ -567,5 +567,60 @@ text-align: center;
 
 
 
+  /* Add this to your existing CSS file or create a new one */
+  .suggestions-list {
+    width: 80%;
+    padding: 8px;
+    font-size: 16px;
+   
+  
+    padding: 0px 40px;
+    text-align: center;
+    text-transform:none;
+  list-style: none;
+  list-style-type: none;
+    background-size: 200% auto;
+    color: rgb(21, 6, 6);            
+  
+    border-radius: 10px;
+    display: block;
+  font-weight: normal;
+  margin-left: 0%;
+  margin-top: 0%;
+  
+  
+  }
+  
+  
+  
+  .suggestions-listli {
+    padding: 1px;
+    cursor: pointer;
+    border: 2px solid #504141;
+    border-radius: 5px;
+    list-style-type: none;
+    font-size: smaller;
+    width: 100%;
+    padding: 3px;
+    font-size: 10px;
+    background-color: #210f0f;
+    background-color: rgb(226, 237, 245);
+  
+   
+    text-align: center;
+    text-transform:none;
+  list-style: none;
+  list-style-type: none;
+    background-size: 200% auto;
+    color: rgb(21, 6, 6);  
+          
+  
+    display: block;
+  font-weight: normal
+  
+  
+  }  
+
+
 
 }
