minor css changess

--- a/Frontend/src/Pages/questionpaper/Search/Searchqp.css
+++ b/Frontend/src/Pages/questionpaper/Search/Searchqp.css
@@ -56,7 +56,9 @@ transition: .3s ease-in;
 
 
 
-
+.mobileinst{
+  visibility: hidden;
+}
 
 
 
@@ -643,6 +645,12 @@ text-align: center;
   
   }  
 
+
+  .mobileinst{
+    visibility: visible;
+  }
+  
+  
 
 
 }
