change in credit

--- a/Frontend/src/Pages/LandingPage/LandingPage.css
+++ b/Frontend/src/Pages/LandingPage/LandingPage.css
@@ -110,7 +110,7 @@
 
 .lin{
  font-style: italic;
- font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+ font-family: 'Times New Roman', Times, serif;
  color: #fff;
 }
 
