--- a/Frontend/src/Pages/Placements/PlacementDetails.css
+++ b/Frontend/src/Pages/Placements/PlacementDetails.css
@@ -12,15 +12,23 @@
     margin-bottom: 10px;
   }
   
-  .image-container {
+  .image-container  {
     margin-bottom: 20px;
   }
   
+
+  .pimage-container{
+    width: 50%;
+    align-items: center;
+    display: inline-block;
+  }
   .placement-image {
     max-width: 100%;
     height: auto;
     display: block;
     border-radius: 8px;
+    align-items: center;
+
   }
   
   .summary {
