--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,13 +1,40 @@
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background: linear-gradient(-45deg, #c35f40, #ff68a2, #9bd9f0, #23d5ab);
+
+background-size: 400% 400%;
+animation: gradient 45s ease infinite;
+
+
+
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+
+
+
+
+
+
+@keyframes gradient {
+0% {
+  background-position: 0% 50%;
 }
+50% {
+  background-position: 100% 50%;
+}
+100% {
+  background-position: 0% 50%;
+}
+}
+
+
+
