--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
+  
 .App {
   text-align: center;
-  font-family: 'Poppins', sans-serif;
-  
+font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-size: contain;
 
 
@@ -66,5 +66,7 @@
   border-radius: 10px;
   display: block;
 }
+
+
 
 
